@startuml
abstract class Mission {
    # Active : bool
    + completed : bool <<get>> <<protected set>>
    - Awake() : void
    +  <<event>> OnCompleted : EventHandler<Mission> 
    +  <<event>> OnActivated : EventHandler 
    +  <<event>> OnDeactivated : EventHandler 
    # OnLoad() : void
    + Activate() : void
    - SpawnCar(startErrored:bool) : void
    # {abstract} Setup() : void
    + Deactivate() : void
    # {abstract} CleanUp() : void
    + SelectRoute(route:AlternativeRoute) : void
    + {abstract} GetObstacleData() : IEnumerable<ObstacleActionListElement>
    + GetHistory() : IEnumerable<HistoryListElement>
}
class "List`1"<T> {
}
class HistoryListElement {
    - timestamp : string
    - description : string
    + selectable : bool <<get>>
    + titleText : string <<get>>
    + labelText : string <<get>>
}
class ObstacleActionListElement {
    + ObstacleActionListElement(state:AdsObstacle.State, obstacle:AdsObstacle)
    + selectable : bool <<get>>
    + titleText : string <<get>>
    + labelText : string <<get>>
    + Apply() : void
}
enum Type {
    Start,
    Waypoint,
    Goal,
    Error,
}
MonoBehaviour <|-- Mission
Mission --> "carPrefab" ADSV_AI
Mission --> "startPoint" Transform
Mission --> "endPoint" Transform
Mission --> "alternativeRoutes" AlternativeRouteHelper
Mission --> "history<HistoryListElement>" "List`1"
Mission --> "carInstance" ADSV_AI
Mission +-- HistoryListElement
IListElement <|-- HistoryListElement
HistoryListElement --> "type" Type
HistoryListElement --> "leftIcon" GlyphData
HistoryListElement --> "rightIcon" GlyphData
Mission +-- ObstacleActionListElement
IListElement <|-- ObstacleActionListElement
ObstacleActionListElement --> "_obstacle" AdsObstacle
ObstacleActionListElement --> "leftIcon" GlyphData
ObstacleActionListElement --> "rightIcon" GlyphData
HistoryListElement +-- Type
@enduml
